# high-level

./: .gitignore  CV_Map.c  CV_Map.py  README.md  SerialCommands.h  SerialTest.cpp
CVSandbox/: .cproject  .project  run-batch.sh
CVSandbox/src/: BlobDetector.hpp  ColorFilter.cpp  ColorFilter.hpp  EMClusteringDemo.cpp  FloodFillDemo.cpp  FrameProcessor.hpp  GrabCutDemo.cpp  SimpleBlobs.cpp  main.cpp  util.cpp  util.hpp
MapSandbox/: .gitignore  CV_Map.py  map2txt.py  map_script.py  mk_map_test.py
PyCVSandbox/: .project
PyCVSandbox/pyBlockDetection/: cmyk.py  util.py
PyCVSandbox/pyPlanning/: Block.py  BlockDetector.py  Planner.py  blockSim.py  storage.txt  twoWayDict.py
PyCVSandbox/pycv/: base.py  linedetection.py  main.py  util.py
cCVSandbox/: run-batch.sh
cCVSandbox/src/: BlobDetector.cpp  BlobDetector.hpp  ColorFilter.hpp  EMClusteringDemo.cpp  FrameProcessor.hpp  GrabCutDemo.cpp  main.cpp
etc/: Makefile  camrecord.py  gpio.c  gpio_wait.py  proc-test.py
localizer/: map.py  mapplot.py  particles.py  pftest.py  raycast.py  robot.py  simulator.py  wide.map
localizer/maps/: test.map  test3.map
qwe/: CHANGES.txt  LICENSE.txt  controller.py  logging.conf  qualifier.py  setup.py  track_follower.py
qwe/action/: arm_action.py
qwe/comm/: .gitignore  Makefile  SerialCommands.cpp  SerialCommands.h  SerialInterface.cpp  SerialInterface.h  SerialTest.cpp  pyComm.i  (+5 more)
qwe/navigation/cmake_build/: CMakeLists.txt
scripts/: build_env_file.sh  check-ip-dyndns.sh  check-ip.sh  map_to_sbpl_format.sh  map_to_sbpl_format.txt  post-ip.sh  qwe-go.sh  verify-inet.sh
(+112 files in other folders)
